--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,6 +1,10 @@
 .navbar {
     background-color: black;
-    margin-bottom: 20px;
+    /*bottom position*/
+    position: fixed;
+    top: 0;
+     width: 100%;
+    z-index: 99;
 }
 
 #logo {
