--- a/src/app/playlist/playlist.component.css
+++ b/src/app/playlist/playlist.component.css
@@ -1,3 +1,9 @@
+.container {
+    position: relative;
+    height: 80vh;
+    overflow: auto;
+}
+
 #create-playlist-button {
     margin-bottom: 10px;
 }
