--- a/src/app/track/track.component.css
+++ b/src/app/track/track.component.css
@@ -1,23 +1,39 @@
-.media-player {
-    background-color:#000000;
-    /*bottom position*/
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    z-index: 99;
-    /*center elements*/
-    display: flex;
-    justify-content: center;
-    padding: 7px;
-}
-
-audio {
+.container {
+    padding-top: 15px;
+    padding-bottom: 30px;
+    background: rgb(0,0,0);
     border-radius: 10px;
-    background: rgb(1,101,3);
-    background: linear-gradient(243deg, rgba(1,101,3,1) 3%, rgba(162,200,163,1) 51%, rgba(213,226,198,1) 75%, rgba(101,99,145,1) 99%);    
 }
 
-.media-btn {
+/* SCROLLBAR TABLE*/
+.my-custom-scrollbar {
+    position: relative;
+    height: 60vh;
+    overflow: auto;
+}
+.table-wrapper-scroll-y {
+    display: block;
+}
+
+.select-playlist-button {
+    min-width: 125.1px;
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    font-weight: 600;
+    font-size: 0.9rem;
+}
+
+.add-remove-track-button {
+    min-width: 125.1px;
+}
+
+.add-remove-track-p {
+    display: inline;
+    font-size: 1rem;
+}
+
+.play-button {
     border-radius: 100%;
     width: 2rem;
     height: 2rem;
@@ -29,36 +45,6 @@ audio {
     font-size: 0.7rem;
     color:rgb(0, 27, 0);
     text-align: center;
-}
-
-.select-playlist-button {
-    border: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    font-weight: 600;
-    font-size: 0.9rem;
-}
-
-.add-to-playlist-button {
-    display: inline;
-    font-size: 1rem;
-}
-
-.container {
-    padding-top: 15px;
-    padding-bottom: 30px;
-    background: rgb(0,0,0);
-    border-radius: 10px;
-}
-
-/* SCROLLBAR TABLE*/
-.my-custom-scrollbar {
-    position: relative;
-    height: 57vh;
-    overflow: auto;
-}
-.table-wrapper-scroll-y {
-    display: block;
 }
 
 thead {
