--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -1,10 +1,3 @@
-<!-- Media Player -->
-<div class="media-player">
-    <audio controls src={{audioFileSource}} autoplay>
-        <source type="audio/mpeg">
-    </audio>
-</div>
-
 <div class="container" id="main-container">
     <div class="row">
         <div class="col-xl-12">
@@ -37,14 +30,19 @@
 
                             <tbody>
                                 <tr *ngFor="let track of tracks">
-                                    <td><button type="button" class="btn btn-success media-btn"
+                                    <td><button type="button" class="btn btn-success play-button"
                                             (click)="playTrack(track.id)"><i class="fas fa-play"></i></button></td>
                                     <td>{{track?.artist}}</td>
                                     <td>{{track?.title}}</td>
-                                    <td><button type="button" class="btn btn-outline-success"
-                                            *ngIf="checkIfTrackIsInCurrentPlaylist(track)"
-                                            (click)="addTrackToPlaylist(track, currentPlaylist.id)">
-                                            <p class="add-to-playlist-button">Add to playlist</p>
+                                    <td><button type="button" class="btn btn-outline-success add-remove-track-button"
+                                            *ngIf="!isCurrentPlaylistNull() && checkIfTrackIsInCurrentPlaylist(track)"
+                                            (click)="addTrackToPlaylist(track.id)">
+                                            <p class="add-remove-track-p">Add track</p>
+                                        </button>
+                                        <button type="button" class="btn btn-outline-danger add-remove-track-button"
+                                            *ngIf="!isCurrentPlaylistNull() && !checkIfTrackIsInCurrentPlaylist(track)"
+                                            (click)="removeTrackFromPlaylist(track.id)">
+                                            <p class="add-remove-track-p">Remove track</p>
                                         </button>
                                     </td>
                                 </tr>
