--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,15 @@
 
 html body {
     height: 100%;
-    min-height: 100vh;
+    min-height: 80vh;
     background: rgb(15,14,14);
     background: linear-gradient(180deg, rgba(15,14,14,1) 0%, rgba(77,56,50,1) 50%, rgba(15,14,14,1) 100%);
 }
 
 .search {
     margin-bottom: 10px;
+}
+
+#main-container {
+    margin-top: 65px;
 }
