--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -20,7 +20,7 @@
                                     <th>Title</th>
                                     <th>
                                         <select class="btn-sm btn-success select-playlist-button">
-                                            <option selected>Select playlist ▼</option>
+                                            <option selected>Playlist ▼</option>
                                             <option *ngFor="let playlist of playlists"
                                                 (click)="setCurrentPlaylist(playlist)">{{playlist?.name}}</option>
                                         </select>
