--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ html body {
     background: rgb(15,14,14);
     background: linear-gradient(180deg, rgba(15,14,14,1) 0%, rgba(77,56,50,1) 50%, rgba(15,14,14,1) 100%);
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 1rem;
 }
 
 .search {
@@ -18,3 +19,4 @@ html body {
 #main-container {
     margin-top: 65px;
 }
+
