--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -20,12 +20,18 @@
           </li>
        </ul>
        <ul class="navbar-nav ml-auto" id="mdb-navbar">
-          <li class="nav-item active">
+          <li class="nav-item active" *ngIf="authService?.user == undefined">
              <a class="nav-link" (click)="onOpenNavModal('login')"> Login <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item active">
+          <li class="nav-item active" *ngIf="authService?.user == undefined">
              <a class="nav-link" (click)="onOpenNavModal('post')"> Register <span class="sr-only">(current)</span></a>
           </li>
+          <li class="nav-item active" *ngIf="authService?.user != undefined">
+            <a class="nav-link"> {{authService?.user.email}}</a>
+         </li>
+         <li class="nav-item active" *ngIf="authService?.user != undefined">
+            <a class="nav-link" (click)="authService?.logOut()"> Logout</a>
+         </li>
        </ul>
  
     </div>
