--- a/src/app/track/track.component.html
+++ b/src/app/track/track.component.html
@@ -19,8 +19,8 @@
                                     <th>Artist</th>
                                     <th>Title</th>
                                     <th>
-                                        <select class="btn-sm btn-success select-playlist-button">
-                                            <option selected>Playlist ▼</option>
+                                        <select class="btn-sm btn-success select-playlist-button float-right" (click)="getUserPlaylists()">
+                                            <option selected *ngIf="currentPlaylistName=='Playlist'">{{currentPlaylistName}} ▼</option>
                                             <option *ngFor="let playlist of playlists"
                                                 (click)="setCurrentPlaylist(playlist)">{{playlist?.name}}</option>
                                         </select>
@@ -35,12 +35,12 @@
                                     <td>{{track?.artist}}</td>
                                     <td>{{track?.title}}</td>
                                     <td>
-                                        <button type="button" class="btn btn-outline-success add-remove-track-button"
+                                        <button type="button" class="btn btn-outline-success add-remove-track-button float-right"
                                             *ngIf="!isCurrentPlaylistNull() && checkIfTrackIsInCurrentPlaylist(track)"
                                             (click)="addTrackToPlaylist(track.id)">
                                             <p class="add-remove-track-p">Add track</p>
                                         </button>
-                                        <button type="button" class="btn btn-outline-danger add-remove-track-button"
+                                        <button type="button" class="btn btn-outline-danger add-remove-track-button float-right"
                                             *ngIf="!isCurrentPlaylistNull() && !checkIfTrackIsInCurrentPlaylist(track)"
                                             (click)="removeTrackFromPlaylist(track.id)">
                                             <p class="add-remove-track-p">Remove track</p>
@@ -54,7 +54,7 @@
                                 tracks</button>
                         </div>
                         <!-- Notification for no users -->
-                        <div *ngIf="tracks?.length == 0" class="col-lg-12 col-md-12 col-xl-12">
+                        <div *ngIf="tracks?.length == 0" class="col-12">
                             <div class="alert alert-info" role="alert">
                                 <h4 class="alert-heading">No results!</h4>
                                 <p>No tracks were found.</p>
