--- a/src/app/mediaplayer/mediaplayer.component.css
+++ b/src/app/mediaplayer/mediaplayer.component.css
@@ -11,8 +11,9 @@
     padding: 7px;
 }
 
-audio {
-    border-radius: 10px;
+audio, audio::-webkit-media-controls-panel {
+    border: none;
+    border-radius: 25px;
     background: rgb(1,101,3);
-    background: linear-gradient(243deg, rgba(1,101,3,1) 3%, rgba(162,200,163,1) 51%, rgba(213,226,198,1) 75%, rgba(101,99,145,1) 99%);    
+    background: linear-gradient(243deg, rgba(1,101,3,1) 3%, rgba(162,200,163,1) 51%, rgba(213,226,198,1) 80%, rgba(101,99,145,1) 99%);    
 }
