Added play option in playlists

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" routerLink="/user" id="logo">MDB</a>
+   <a class="navbar-brand">MDB</a>
+    <a class="navbar-brand" routerLink="/user" id="logo">Users</a>
  
     <!-- Switches to dropdown menu on mobile devices-->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
@@ -10,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
        <ul class="navbar-nav mr-auto" id="mdb-navbar">
           <li class="nav-item active">
-             <a class="nav-link" routerLink="/"> Listen to something <span class="sr-only">(current)</span></a>
+             <a class="nav-link" routerLink="/"> To Music Library <span class="sr-only">(current)</span></a>
           </li>
        </ul>
        <ul class="navbar-nav ml-auto" id="mdb-navbar">
