--- a/src/app/playlist/playlist.component.css
+++ b/src/app/playlist/playlist.component.css
@@ -1,6 +1,6 @@
 .container {
     position: relative;
-    height: 80vh;
+    height: auto;
     overflow: auto;
 }
 
@@ -19,8 +19,17 @@
     font-size: 1.5rem;
 }
 
+.dropdown-menu {
+    background-color: rgb(153, 194, 153);
+    margin-left: 7px;
+}
+
 .btn {
     color: black;
+}
+
+.btn-sm {
+    margin-right: 5px;
 }
 
 #dropdownMenuButton {
@@ -32,5 +41,5 @@
 }
 
 .w-60 {
-    width: 60px;
+    width: 20px;
 }
